--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -2,4 +2,23 @@
   position: absolute;
   top: 0px;
   left: 120px;
+  width: 800px;
+}
+
+.post {
+  height: 100px;
+  width: 500px;
+  border: 1px solid black;
+  margin: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+
+.post-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
