--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,8 +1,9 @@
 .dashboard-container {
-  position: absolute;
   top: 0px;
   left: 120px;
-  width: 800px;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
 }
 
 .post {
@@ -21,4 +22,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 100px;
+}
+
+.search-bar {
+  position: absolute;
+  width: 80vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 25px;
 }
