--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -7,16 +7,29 @@
   width: 120px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-content: center;
   align-items: center;
 }
 
+.nav-items {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .prof-pic {
+  margin-top: 20px;
   border-radius: 50%;
   background-color: white;
 }
 
 .username {
+  margin-top: -70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: white;
   font-size: 20px;
 }
