--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -7,17 +7,23 @@
 }
 
 .post {
-  height: 100px;
+  top: 50%;
+  left: 150px;
+  height: 150px;
   width: 500px;
-  border: 1px solid black;
-  margin: 5px;
+  margin-top: 75px;
+  margin-bottom: 75px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-evenly;
+  margin-top: -50px;
+  margin-left: -130px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 5px;
 }
 
-.post-container {
+.posts-container {
   display: flex;
   flex-direction: column;
   align-items: center;
