--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,6 +1,16 @@
 .form-container {
+  top: 50%;
+  left: 50%;
+  height: 500px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+  align-items: center;
   position: absolute;
-  top: 0px;
-  left: 120px;
-  width: 700px;
+  margin-top: -250px;
+  margin-left: -250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
 }
